--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap" rel="stylesheet">
 </head>
+<style>
+    .sora-font {
+  font-family: "Sora", serif;
+  font-optical-sizing: auto;
+}
+</style>
 
 <body class="sora-font">
     <header>
